# dnd_tracker

./: .gitignore  Makefile  Makefile.campaign  Makefile.character  Makefile.chat  Makefile.dice  Makefile.export  Makefile.handbook  Makefile.setting
.github/workflows/: check.yml
campaign_service/: .dockerignore  .env.example  .env.prod  Dockerfile  docker-compose.yml  main.py  pyproject.toml
campaign_service/app/: campaign_service.py
campaign_service/app/config/: dependencies.py  logging.py  settings.py
campaign_service/app/db/models/: campaign.py  enums.py
campaign_service/app/db/repos/: campaign_repository.py
campaign_service/app/routes/: campaign_routes.py
campaign_service/app/schemas/: campaign_schemas.py
campaign_service/migrations/: env.py
campaign_service/migrations/versions/: 35fff6d9f3c2_.py  c4ea0150d813_.py
campaign_service/tests/: conftest.py
campaign_service/tests/integration/: test_campaign_api.py
campaign_service/tests/unit/: test_campaign_logic.py
character_service/: .env  .env.example  .env.prod  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
character_service/app/config/: dependencies.py  logging.py  settings.py
character_service/app/db/: db_vitals.py
character_service/app/db/models/: character.py  character_class.py  characteristics_sheet.py  race.py  users_characters.py  weapon.py
character_service/app/routers/: character_routes.py  characteristics_routes.py
character_service/app/schemas/: character_schemas.py  characteristics_schemas.py
character_service/app/services/: character_service.py  characteristics_service.py
character_service/app/utils/: security.py
character_service/migrations/: env.py
character_service/migrations/versions/: 14c6275d697e_.py  2f58ed84049f_initial.py
character_service/tests/api/: test_get_character.py
character_service/tests/unit/: test_get.py
chat_service/: .env.example  .env.prod  Dockerfile  docker-compose.yml  main.py  pyproject.toml
chat_service/app/: __init__.py  chat_service.py
chat_service/app/config/: dependencies.py  logging.py  settings.py
chat_service/app/db/: db_vitals.py
chat_service/app/db/repos/: message_repository.py
chat_service/app/routes/: chat_routes.py
chat_service/app/schemas/: message_schemas.py
chat_service/tests/: conftest.py
chat_service/tests/api/: test_api.py
chat_service/tests/unit/: test_chat_service.py
dice_service/: .dockerignor  Dockerfile  docker-compose.yml  main.py  pyproject.toml
dice_service/app/config/: dependencies.py  logging.py  settings.py
dice_service/app/routers/: dice_routes.py
dice_service/app/schemas/: dice_schemas.py
dice_service/app/services/: dice_service.py
dice_service/tests/: conftest.py
dice_service/tests/api/: test_api.py
dice_service/tests/comp/: test_comp.py
dice_service/tests/utils/: test_security.py
export_service/: pyproject.toml
handbook_service/: .env.example  .env.prod  Dockerfile  docker-compose.yml  main.py  pyproject.toml
handbook_service/app/: handbook_service.py
handbook_service/app/config/: dependencies.py  logging.py  settings.py
handbook_service/app/db/: db_vitals.py
handbook_service/app/routes/: wiki_routes.py
handbook_service/app/schemas/: wiki_schemas.py
handbook_service/tests/: conftest.py
handbook_service/tests/api/: test_api.py
handbook_service/tests/unit/: test_handbook_service.py
setting_service/: .env.example  .env.prod  Dockerfile  docker-compose.yml  main.py  pyproject.toml
setting_service/app/: setting_service.py
setting_service/app/config/: dependencies.py  logging.py  settings.py
setting_service/app/db/: db_vitals.py
setting_service/app/routes/: setting_routes.py
setting_service/app/schemas/: setting_schemas.py
setting_service/tests/api/: test_api.py
setting_service/tests/unit/: test_setting_service.py
user_service/: .env.example  .env.prod  Dockerfile  docker-compose.yml  main.py  pyproject.toml
user_service/app/: user_service.py
user_service/app/config/: dependencies.py  logging.py  settings.py
user_service/app/db/: db_vitals.py
user_service/app/routes/: user_routes.py
user_service/app/schemas/: user_schemas.py
user_service/app/utils/: security.py
user_service/migrations/: env.py
user_service/migrations/versions/: 19dd605fd777_init.py  7371d5a517c7_.py  c1c671b4d915_.py
user_service/tests/: conftest.py
user_service/tests/api/: test_api.py
user_service/tests/utils/: test_security.py
(+10 files in other folders)
