[tool.poetry]
name = "campaign-service"
version = "0.1.0"
description = ""
authors = ["d.zaklyakov"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.121.1,<0.122.0"
uvicorn = ">=0.38.0,<0.39.0"
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
pydantic-settings = ">=2.12.0,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
sqlalchemy = ">=2.0.44,<3.0.0"
asgi-correlation-id = ">=4.3.4,<5.0.0"
alembic = ">=1.17.1,<2.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pytest = "^9.0.1"
httpx = "^0.28.1"
faker = "^38.2.0"
pytest-mock = "^3.15.1"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".."]
